syntax = "proto3";

package favorite_v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "buf/validate/validate.proto";
import "pet.proto";

option go_package = "github.com/escoutdoor/kotopes/common/api/favorite/v1;favorite_v1";

service FavoriteV1 {
    // Creates user's favorite list item
    rpc Create(CreateRequest) returns (CreateResponse);

    // Deletes user's favorite list item
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty);

    // Returns user's favorite list
    rpc ListFavorites(ListFavoritesRequest) returns (ListFavoritesResponse);
}

message Favorite {
    string id = 1 [(buf.validate.field).string.uuid = true];
    string user_id = 2 [(buf.validate.field).string.uuid = true];
    string pet_id = 3 [(buf.validate.field).string.uuid = true];
    google.protobuf.Timestamp created_at = 4;
}

message CreateRequest { 
    string pet_id = 1 [(buf.validate.field).string.uuid = true];
    string user_id = 2 [(buf.validate.field).string.uuid = true];
}

message CreateResponse {
    string id = 1 [(buf.validate.field).string.uuid = true];
}

message DeleteRequest {
    string favorite_id = 1 [(buf.validate.field).string.uuid = true];
    string user_id = 2 [(buf.validate.field).string.uuid = true];
}

message ListFavoritesRequest {
    string user_id = 1 [(buf.validate.field).string.uuid = true];
    int32 limit = 2 [
        (buf.validate.field).int32 = {
            gte: 1,
            lte: 100
        }
    ];
    int32 offset = 3 [
        (buf.validate.field).int32 = {
            gte: 0
        }
    ];
}

message ListFavoritesResponse {
    message FavoritePet {
        string id = 1 [(buf.validate.field).string.uuid = true];
        string user_id = 2 [(buf.validate.field).string.uuid = true];
        pet_v1.Pet pet = 3;
        google.protobuf.Timestamp created_at = 4;
    }

    repeated FavoritePet favorites = 1;
    int32 total = 2 [(buf.validate.field).int32.gte = 0];
}
